[gd_scene load_steps=32 format=3 uid="uid://y8i53dbxrgoy"]

[ext_resource type="Texture2D" uid="uid://b3tnox2fbaaqn" path="res://assets/assets/Fire Trap/PNGs/Fire Trap - Level 3.png" id="1_80bmd"]
[ext_resource type="Texture2D" uid="uid://2r46v6kjtqn8" path="res://assets/assets/Fire Trap/Transition/PNGs/Fire Trap - Level 3 - Transition.png" id="1_g73fy"]
[ext_resource type="Script" path="res://common/trap/fire_trap/FireTrap.gd" id="1_p0b3i"]
[ext_resource type="Script" path="res://characters/HitBox.gd" id="2_mdohy"]
[ext_resource type="Script" path="res://characters/enemies/monk/PlayerDetectionArea.gd" id="4_s6o2g"]
[ext_resource type="Script" path="res://common/trap/TrapStateMachine.gd" id="6_cc148"]
[ext_resource type="Script" path="res://common/trap/fire_trap/state/InactiveState.gd" id="7_57p0j"]
[ext_resource type="Script" path="res://common/trap/fire_trap/state/ActiveState.gd" id="8_1sy8y"]
[ext_resource type="Script" path="res://common/trap/fire_trap/state/ActivatingState.gd" id="9_vww16"]
[ext_resource type="Script" path="res://common/trap/fire_trap/state/DeactivatingState.gd" id="10_so8la"]
[ext_resource type="Script" path="res://common/trap/StateLabel.gd" id="11_tyl1d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cme0t"]
size = Vector2(22, 6)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_abfh2"]
radius = 13.0
height = 82.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1nnqv"]
size = Vector2(364, 235)

[sub_resource type="Animation" id="Animation_jw3f0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_27rj3"]
resource_name = "activate"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_g73fy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_p8tm0"]
resource_name = "attack"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_80bmd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.25, 0.35, 0.45, 0.55, 0.65, 0.75, 0.85, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.85),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_qtruq"]
resource_name = "deactivate"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_g73fy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 7, 6, 5, 4, 3, 2, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_epbft"]
resource_name = "inactive"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_g73fy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4rrug"]
_data = {
"RESET": SubResource("Animation_jw3f0"),
"activate": SubResource("Animation_27rj3"),
"attack": SubResource("Animation_p8tm0"),
"deactivate": SubResource("Animation_qtruq"),
"inactive": SubResource("Animation_epbft")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0v6qg"]
animation = &"activate"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2t0ey"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iudys"]
animation = &"deactivate"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dnlpi"]
animation = &"inactive"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4owia"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8on4l"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pvb6m"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_leiy5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kf3ta"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_245a1"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_4413a"]
states/Start/position = Vector2(106, 100)
states/activate/node = SubResource("AnimationNodeAnimation_0v6qg")
states/activate/position = Vector2(387, 100)
states/attack/node = SubResource("AnimationNodeAnimation_2t0ey")
states/attack/position = Vector2(550, 100)
states/deactivate/node = SubResource("AnimationNodeAnimation_iudys")
states/deactivate/position = Vector2(462, 212)
states/inactive/node = SubResource("AnimationNodeAnimation_dnlpi")
states/inactive/position = Vector2(248, 100)
transitions = ["activate", "attack", SubResource("AnimationNodeStateMachineTransition_4owia"), "attack", "deactivate", SubResource("AnimationNodeStateMachineTransition_8on4l"), "Start", "inactive", SubResource("AnimationNodeStateMachineTransition_pvb6m"), "inactive", "activate", SubResource("AnimationNodeStateMachineTransition_leiy5"), "deactivate", "inactive", SubResource("AnimationNodeStateMachineTransition_kf3ta"), "activate", "deactivate", SubResource("AnimationNodeStateMachineTransition_245a1")]

[node name="FireTrap" type="RigidBody2D"]
texture_filter = 1
script = ExtResource("1_p0b3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 28)
shape = SubResource("RectangleShape2D_cme0t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_g73fy")
hframes = 11

[node name="HitBox" type="Area2D" parent="Sprite2D"]
visible = false
script = ExtResource("2_mdohy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HitBox"]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_abfh2")
disabled = true

[node name="PlayerDetectionArea" type="Area2D" parent="."]
script = ExtResource("4_s6o2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, -57.5)
shape = SubResource("RectangleShape2D_1nnqv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4rrug")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4rrug")
}
tree_root = SubResource("AnimationNodeStateMachine_4413a")
anim_player = NodePath("../AnimationPlayer")

[node name="TrapStateMachine" type="Node" parent="."]
script = ExtResource("6_cc148")

[node name="Inactive" type="Node" parent="TrapStateMachine"]
script = ExtResource("7_57p0j")

[node name="Active" type="Node" parent="TrapStateMachine"]
script = ExtResource("8_1sy8y")

[node name="Activating" type="Node" parent="TrapStateMachine"]
script = ExtResource("9_vww16")

[node name="Deactivating" type="Node" parent="TrapStateMachine"]
script = ExtResource("10_so8la")

[node name="StateLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("11_tyl1d")
state_machine = NodePath("../TrapStateMachine")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="TrapStateMachine/Activating" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="TrapStateMachine/Deactivating" method="_on_animation_tree_animation_finished"]
